--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>佐藤</h1>
-  <p>プログラマーです。おじさんです。</p>
-  <h2>読んだ本</h2>
+  <p>プログラマーです。</p>
+  <h2>今月読んだ本</h2>
   <ul>
     <li>これからはじめるVue.js実践入門</li>
   </ul>
