--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>佐藤のサイト</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <h1>佐藤</h1>
-  <p>プログラマーです。</p>
-  <h2>今月読んだ本</h2>
-  <ul>
-    <li>これからはじめるVue.js実践入門</li>
-  </ul>
-</body>
-</html>
+<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>佐藤のサイト</title><link href="/css/app.25227bf3.css" rel="preload" as="style"><link href="/js/app.0360bed2.js" rel="preload" as="script"><link href="/js/chunk-vendors.8e945251.js" rel="preload" as="script"><link href="/css/app.25227bf3.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but search-book-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.8e945251.js"></script><script src="/js/app.0360bed2.js"></script></body></html>
